--- a/style.css
+++ b/style.css
@@ -1,342 +1,10 @@
-/* Global Styles */
 body {
   margin: 0;
-  font-family: 'Varela Round', serif;
-  background-color: var(--background-color);
-  color: var(--text-color);
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  transition: background-color 0.5s ease, color 0.5s ease;
+  overflow: hidden;
+  background-color: #111;
 }
 
-/* Typing effect cursor */
-.cursor {
-  display: inline-block;
-  margin-left: 5px;
-  width: 10px;
-  height: 1em;
-  background-color: #333;
-  animation: blink 1s infinite;
-}
-
-@keyframes blink {
-  50% {
-    opacity: 0;
-  }
-}
-
-/* Thèmes clair et sombre */
-:root {
-  --background-color: #FFFFFF; /* Light background */
-  --text-color: #0C0C0C; /* Dark text */
-}
-
-[data-theme="dark"] {
-  --background-color: #0C0C0C; /* Dark background */
-  --text-color: #FFFFFF; /* Light text */
-}
-
-.right-side h1, .right-side p {
-  color: var(--text-color); /* Use the variable for text color */
-  transition: color 0.5s ease; /* Smooth transition for text color */
-}
-
-/* Sidebar */
-.sidebar {
-  position: fixed;
-  top: 2vh;
-  bottom: 2vh;
-  left: -100%; /* Cachée totalement */
-  width: 60vw;
-  max-width: 300px;
-  min-width: 200px;
-  background-color: rgba(113, 125, 125, 0.3);
-  color: #FFFFFF;
-  border-radius: 20px;
-  padding: 10px 0;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
-  transition: left 0.3s ease-in-out;
-  z-index: 1000;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  overflow-y: auto;
-  max-height: 96vh;
-}
-
-.sidebar ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.sidebar ul li {
-  display: flex;
-  justify-content: center; /* Centre horizontalement */
-  align-items: center; /* Centre verticalement */
-  padding: 15px;
-}
-
-.sidebar ul li a {
-  text-decoration: none;
-  color: #FFFFFF;
-  font-size: 16px;
-  padding: 10px 20px;
-  background-color: rgba(255, 255, 255, 0.2); /* Fond léger pour effet bouton */
-  border: 1px solid #FFFFFF;
-  border-radius: 20px;
-  transition: background-color 0.3s, transform 0.2s;
-  text-align: center;
-  width: 80%; /* Tu peux ajuster si besoin */
-}
-
-.sidebar ul li a:hover {
-  background-color: rgba(255, 255, 255, 0.4);
-  transform: scale(1.05);
-}
-
-/* Sidebar Image */
-.sidebar-image-container {
-  text-align: right; /* Aligner l'image à droite */
-  padding: 10px;
-}
-
-.sidebar-image {
-  width: 10%;
-  margin-left: auto; /* Coller l'image à droite */
-}
-
-/* Close Button */
-.close-btn {
-  position: absolute;
-  top: 10px; /* Placer le bouton en haut de la sidebar */
-  left: 10px; /* Placer le bouton à gauche */
-  background-color: #D7D7D7;
-  color: #0C0C0C;
-  padding: 10px;
-  border-radius: 20%;
-  cursor: pointer;
-  transition: background-color 0.5s ease, color 0.5s ease;
-}
-
-/* Header */
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: var(--background-color);
-  color: var(--text-color);
-  padding: 10px 20px;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-  transition: background-color 0.5s ease, color 0.5s ease;
-}
-
-/* Hamburger Menu */
-.hamburger-menu {
-  display: flex;
-  flex-direction: column-reverse;
-  gap: 4px;
-  cursor: pointer;
-}
-
-.hamburger-menu .line {
-  width: 2rem;
-  height: 0.3rem;
-  background: var(--text-color);
-  border-radius: 0.5rem;
-  transition: background-color 0.5s ease;
-}
-
-/* Body */
-.content {
-  display: flex;
-  flex: 1;
-  padding: 20px;
-  background-color: var(--background-color);
-  color: var(--text-color);
-  transition: background-color 0.5s ease, color 0.5s ease;
-}
-
-.left-side {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.profile-image {
-  width: 70%;
-  border-radius: 10%;
-  box-shadow: 0 0 8px rgba(1, 1, 1, 1);
-}
-
-[data-theme="dark"] .profile-image {
-  box-shadow: none;
-}
-
-.right-side {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 20px;
-  font-size: 1.5em;
-  color: var(--text-color);
-}
-
-h1, p {
-  margin: 0;
-}
-
-/* Responsiveness */
-@media (max-width: 768px) {
-  .content {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .left-side, .right-side {
-    flex: none;
-    width: 100%;
-  }
-
-  .profile-image {
-    width: 50%;
-  }
-
-  .mitriiini-img-text {
-    width: 50%;
-  }
-}
-
-/* Footer */
-footer {
-  display: flex;
-  flex-direction: column; /* Empiler les éléments */
-  align-items: center; /* Centrer les éléments horizontalement */
-  justify-content: center;
-  padding: 20px 20px;
-  background-color: var(--background-color);
-  color: var(--text-color);
-  transition: background-color 0.5s ease, color 0.5s ease;
-  position: relative;
-}
-
-footer p {
-  margin: 5px 0;
-}
-
-/* Centrer l'année */
-footer .copyright {
-  text-align: center;
-  font-size: 0.5rem;
-  margin-bottom: 10px;
-}
-
-/* Liens dans le footer */
-footer .footer-links {
-  text-align: center;
-}
-
-footer .footer-links a {
-  text-decoration: none;
-  color: var(--text-color);
-  font-size: 0.5rem;
-  margin: 0 10px;
-  transition: color 0.3s ease;
-}
-
-footer .footer-links a:hover {
-  color: #717D7D;
-}
-
-/* Toggle Theme */
-.toggle-theme {
-  position: absolute;
-  right: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #D7D7D7;
-  transition: .4s;
-  border-radius: 34px;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: #FFFFFF;
-  transition: .4s;
-  border-radius: 50%;
-}
-
-input:checked + .slider {
-  background-color: #717D7D;
-}
-
-input:checked + .slider:before {
-  transform: translateX(26px);
-}
-
-/* PNG Image */
-#pngImage {
-  position: absolute;
-  display: none;
-  transition: opacity 0.3s ease-in-out; /* Transition pour l'effet de fondu */
-  pointer-events: none; /* Empêche l'image d'interférer avec d'autres éléments */
-}
-
-/* Scrollbar stylée pour la sidebar */
-.sidebar::-webkit-scrollbar {
-  width: 8px; /* Largeur de la scrollbar */
-}
-
-.sidebar::-webkit-scrollbar-track {
-  background: transparent; /* Fond transparent pour rester propre */
-  border-radius: 10px;
-}
-
-.sidebar::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.4); /* Couleur du thumb */
-  border-radius: 10px; /* Coins arrondis */
-  border: 2px solid transparent; /* Petit espace autour du thumb */
-  background-clip: padding-box; /* Pour que la bordure soit visible */
-}
-
-.sidebar::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(255, 255, 0, 0.6); /* Plus clair au hover */
-}
-
-/* Firefox */
-.sidebar {
-  scrollbar-width: thin;
-  scrollbar-color: rgba(255, 255, 255, 0.4) transparent;
+#container {
+  width: 100vw;
+  height: 100vh;
 }
